Dockerfile updates, add docker build script, add logstash rsm-api directory

--- a/app/docker/logstash/logstash.conf
+++ b/app/docker/logstash/logstash.conf
@@ -1,7 +1,15 @@
 input {
     file {
-        type => "node"
+        type => "rsm-data"
         path => ["/srv/ride-share-market-data/log/*.log"]
+        codec => "json"
+    }
+}
+
+input {
+    file {
+        type => "rsm-api"
+        path => ["/srv/ride-share-market-api/log/*.log"]
         codec => "json"
     }
 }
@@ -10,7 +18,7 @@ output {
     rabbitmq {
         host => "192.168.33.10"
         user => "rsm"
-        password => "change_me"
+        password => "Y9i6YAgdbW7H"
         vhost => "rsm"
         exchange => "logstash-rabbitmq"
         exchange_type => "direct"
