Add rsm-app logstash logging

--- a/app/docker/logstash/logstash.conf
+++ b/app/docker/logstash/logstash.conf
@@ -14,11 +14,19 @@ input {
     }
 }
 
+input {
+    file {
+        type => "rsm-app"
+        path => ["/srv/ride-share-market-app/log/*.log"]
+        codec => "json"
+    }
+}
+
 output {
     rabbitmq {
         host => "192.168.33.10"
         user => "rsm"
-        password => "change_me"
+        password => "Y9i6YAgdbW7H"
         vhost => "rsm"
         exchange => "logstash-rabbitmq"
         exchange_type => "direct"
