Add docker nginx

--- a/app/docker/logstash/logstash.conf
+++ b/app/docker/logstash/logstash.conf
@@ -26,7 +26,7 @@ output {
     rabbitmq {
         host => "192.168.33.10"
         user => "rsm"
-        password => "Y9i6YAgdbW7H"
+        password => "change_me"
         vhost => "rsm"
         exchange => "logstash-rabbitmq"
         exchange_type => "direct"
