--- a/app/docker/logstash/Dockerfile
+++ b/app/docker/logstash/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:14.04
 MAINTAINER Ride Share Market "systemsadmin@ridesharemarket.com"
 
 # APT cache
-ENV APT_REFRESHED_AT 2015-03-19.1
+ENV APT_REFRESHED_AT 2015-04-05.1
 RUN apt-get -yqq update
 
 # Required packages
@@ -11,9 +11,11 @@ RUN \
     wget -O - http://packages.elasticsearch.org/GPG-KEY-elasticsearch | apt-key add - && \
     echo 'deb http://packages.elasticsearch.org/logstash/1.4/debian stable main' > /etc/apt/sources.list.d/logstash.list && \
     apt-get -yqq update && \
-    apt-get -yqq install logstash
+    apt-get -yqq install logstash && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-ENV CONF_REFRESHED_AT 2015-03-19.1
+ENV CONF_REFRESHED_AT 2015-04-05.1
 
 COPY logstash.conf /etc/
 
