Add development mode SSL to nginx docker image, documentaion updates

--- a/app/docker/nginx/Dockerfile
+++ b/app/docker/nginx/Dockerfile
@@ -14,14 +14,17 @@ RUN \
     rm -rf /var/lib/apt/lists/* && \
     echo "\ndaemon off;" >> /etc/nginx/nginx.conf && \
     chown -R www-data.www-data /var/lib/nginx && \
+    mkdir /etc/nginx/ssl && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 COPY ridesharemarket.com.conf /etc/nginx/sites-available/ridesharemarket.com
+COPY ssl/ridesharemarket.com.cert /etc/nginx/ssl/ridesharemarket.com.cert
+COPY ssl/ridesharemarket.com.key /etc/nginx/ssl/ridesharemarket.com.key
 RUN ln -s /etc/nginx/sites-available/ridesharemarket.com /etc/nginx/sites-enabled/ridesharemarket.com
 
 # Define mountable directories.
-#VOLUME ["/etc/nginx/sites-enabled", "/etc/nginx/certs", "/etc/nginx/conf.d", "/var/log/nginx", "/var/www/html"]
+VOLUME "/var/log/nginx"
 
 # Define working directory.
 WORKDIR /etc/nginx
