--- a/app/docker/nginx/ridesharemarket.com.conf
+++ b/app/docker/nginx/ridesharemarket.com.conf
@@ -7,9 +7,7 @@ upstream rsm_api_upstream {
 }
 
 server {
-
-    listen 80;
-
+    listen 443 ssl;
     server_name ridesharemarket.com;
 
     location / {
@@ -24,11 +22,24 @@ server {
         proxy_pass http://rsm_app_upstream;
     }
 
+    ssl on;
+    ssl_certificate /etc/nginx/ssl/ridesharemarket.com.cert;
+    ssl_certificate_key /etc/nginx/ssl/ridesharemarket.com.key;
+
 }
+
+# Redirect non-SSL to SSL.
 server {
     listen      80;
+    server_name ridesharemarket.com www.ridesharemarket.com;
+    return      301 https://ridesharemarket.com$request_uri;
+}
+
+# Redirect SSL 'www.' to domain name only.
+server {
+    listen      443 ssl;
     server_name www.ridesharemarket.com;
-    return      301 $scheme://ridesharemarket.com$request_uri;
+    return      301 https://ridesharemarket.com$request_uri;
 }
 
 server {
