--- a/app/docker/nginx/ridesharemarket.com.conf
+++ b/app/docker/nginx/ridesharemarket.com.conf
@@ -26,6 +26,24 @@ server {
     ssl_certificate /etc/nginx/ssl/ridesharemarket.com.cert;
     ssl_certificate_key /etc/nginx/ssl/ridesharemarket.com.key;
 
+    # https://raymii.org/s/tutorials/Strong_SSL_Security_On_nginx.html
+    ssl_ciphers 'AES128+EECDH:AES128+EDH:!aNULL';
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_session_cache shared:SSL:10m;
+
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.4.4 8.8.8.8 valid=300s;
+    resolver_timeout 10s;
+
+    ssl_prefer_server_ciphers on;
+    ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+    add_header Strict-Transport-Security max-age=63072000;
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+
 }
 
 # Redirect non-SSL to SSL.
