--- a/app/docker/logstash/logstash.conf
+++ b/app/docker/logstash/logstash.conf
@@ -22,11 +22,33 @@ input {
     }
 }
 
+input {
+  file {
+    type => "nginx-access"
+    path => [
+        "/var/log/nginx/access.log",
+        "/var/log/nginx/access-rsm-api.log",
+        "/var/log/nginx/access-rsm-app.log"
+    ]
+  }
+}
+
+input {
+  file {
+    type => "nginx-error"
+    path => [
+        "/var/log/nginx/error.log",
+        "/var/log/nginx/error-rsm-api.log",
+        "/var/log/nginx/error-rsm-app.log"
+    ]
+  }
+}
+
 output {
     rabbitmq {
         host => "192.168.33.10"
         user => "rsm"
-        password => "change_me"
+        password => "Y9i6YAgdbW7H"
         vhost => "rsm"
         exchange => "logstash-rabbitmq"
         exchange_type => "direct"
