--- a/app/docker/nginx/ridesharemarket.com.conf
+++ b/app/docker/nginx/ridesharemarket.com.conf
@@ -10,6 +10,9 @@ server {
     listen 443 ssl;
     server_name ridesharemarket.com;
 
+    access_log /var/log/nginx/access-rsm-app.log;
+    error_log /var/log/nginx/error-rsm-app.log;
+
     location / {
         root /srv/ride-share-market-app/dist;
         try_files $uri @rsm_app;
@@ -63,8 +66,10 @@ server {
 server {
 
     listen 80;
-
     server_name api.ridesharemarket.com;
+
+    access_log /var/log/nginx/access-rsm-api.log;
+    error_log /var/log/nginx/error-rsm-api.log;
 
     location / {
         proxy_set_header X-Real-IP  $remote_addr;
