--- a/app/docker/logstash/logstash.conf
+++ b/app/docker/logstash/logstash.conf
@@ -48,7 +48,7 @@ output {
     rabbitmq {
         host => "192.168.33.10"
         user => "rsm"
-        password => "Y9i6YAgdbW7H"
+        password => "CHANGE_ME"
         vhost => "rsm"
         exchange => "logstash-rabbitmq"
         exchange_type => "direct"
