Add gzip, add ssl to api endpoint

--- a/app/docker/nginx/sites-available/ridesharemarket.com.conf
+++ b/app/docker/nginx/sites-available/ridesharemarket.com.conf
@@ -2,16 +2,28 @@ upstream rsm_app_upstream {
     server rsm-app:3000;
 }
 
-upstream rsm_api_upstream {
-    server rsm-api:3001;
-}
-
 server {
-    listen 443 ssl;
-    server_name ridesharemarket.com;
+    listen 443 ssl default_server;
+
+    server_name ridesharemarket.com vbox.ridesharemarket.com;
 
     access_log /var/log/nginx/access-rsm-app.log;
+
     error_log /var/log/nginx/error-rsm-app.log;
+
+    gzip on;
+    etag on;
+    gzip_proxied any;
+    gzip_types text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
+    gzip_vary on;
+    gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+
+    location ~* \.(css|js|gif|jpe?g|png)$ {
+        expires    24h;
+        add_header Cache-Control private;
+        root /srv/ride-share-market-app/dist;
+        try_files $uri @rsm_app;
+    }
 
     location / {
         root /srv/ride-share-market-app/dist;
@@ -51,7 +63,7 @@ server {
 
 # Redirect non-SSL to SSL.
 server {
-    listen      80;
+    listen      80 default_server;
     server_name ridesharemarket.com www.ridesharemarket.com;
     return      301 https://ridesharemarket.com$request_uri;
 }
@@ -61,21 +73,4 @@ server {
     listen      443 ssl;
     server_name www.ridesharemarket.com;
     return      301 https://ridesharemarket.com$request_uri;
-}
-
-server {
-
-    listen 80;
-    server_name api.ridesharemarket.com;
-
-    access_log /var/log/nginx/access-rsm-api.log;
-    error_log /var/log/nginx/error-rsm-api.log;
-
-    location / {
-        proxy_set_header X-Real-IP  $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://rsm_api_upstream;
-    }
-
 }
