--- a/app/docker/nginx/sites-available/api.ridesharemarket.com.conf
+++ b/app/docker/nginx/sites-available/api.ridesharemarket.com.conf
@@ -11,6 +11,13 @@ server {
 
     error_log /var/log/nginx/error-rsm-api.log;
 
+    gzip on;
+    etag on;
+    gzip_proxied any;
+    gzip_types text/plain application/vnd.api+json
+    gzip_vary on;
+    gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+
     location / {
         proxy_set_header X-Real-IP  $remote_addr;
         proxy_set_header Host $host;
