Nginx update to serve static favicon.ico file

--- a/app/docker/nginx/sites-available/ridesharemarket.com.conf
+++ b/app/docker/nginx/sites-available/ridesharemarket.com.conf
@@ -18,7 +18,7 @@ server {
     gzip_vary on;
     gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
-    location ~* \.(css|js|gif|jpe?g|png)$ {
+    location ~* \.(ico|css|js|gif|jpe?g|png)$ {
         expires    24h;
         add_header Cache-Control private;
         root /srv/ride-share-market-app/dist;
