--- a/app/docker/nginx/sites-available/ridesharemarket.com.conf
+++ b/app/docker/nginx/sites-available/ridesharemarket.com.conf
@@ -39,7 +39,7 @@ server {
 
     ssl on;
     # https://mozilla.github.io/server-side-tls/ssl-config-generator/
-    ssl_certificate /etc/nginx/ssl/ridesharemarket.com.cert;
+    ssl_certificate /etc/nginx/ssl/ridesharemarket.com.crt;
     ssl_certificate_key /etc/nginx/ssl/ridesharemarket.com.key;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:50m;
