--- a/app/docker/nginx/sites-available/api.ridesharemarket.com.conf
+++ b/app/docker/nginx/sites-available/api.ridesharemarket.com.conf
@@ -7,7 +7,7 @@ server {
 
     server_name api.ridesharemarket.com api.dev.vbx.ridesharemarket.com;
 
-    access_log /var/log/nginx/access-rsm-api.log;
+    access_log /var/log/nginx/access-rsm-api.log logstash_json;
 
     error_log /var/log/nginx/error-rsm-api.log;
 
