--- a/app/docker/nginx/sites-available/ridesharemarket.com.conf
+++ b/app/docker/nginx/sites-available/ridesharemarket.com.conf
@@ -7,7 +7,7 @@ server {
 
     server_name ridesharemarket.com vbox.ridesharemarket.com;
 
-    access_log /var/log/nginx/access-rsm-app.log;
+    access_log /var/log/nginx/access-rsm-app.log logstash_json;
 
     error_log /var/log/nginx/error-rsm-app.log;
 
